--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>Dynamic Tabs</h2>
+    <h2>Weightlifting Log</h2>
 
     <ul class="nav nav-tabs nav-justified">
         <li class="active"><a data-toggle="tab" href="#home">Main calculator</a></li>
@@ -21,19 +21,19 @@
     </ul>
 
     <div class="tab-content">
-        <div id="home" class="tab-pane fade in active">
+        <div id="home" class="tab-pane fade centered in active">
             <h3>Main calculator</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
-        <div id="menu1" class="tab-pane fade">
+        <div id="menu1" class="tab-pane fade centered">
             <h3>Calculator #1</h3>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-        <div id="menu2" class="tab-pane fade">
+        <div id="menu2" class="tab-pane fade centered">
             <h3>Calculator #2</h3>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
         </div>
-        <div id="menu3" class="tab-pane fade">
+        <div id="menu3" class="tab-pane fade centered">
             <h3>Login page</h3>
             <p th:if="${loginError}" class="error">Wrong user or password</p>
             <form th:action="@{/}" method="post">
