error page styled

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -5,6 +5,6 @@
     <title>Weightlifting Log Admin Panel</title>
 </head>
 <body>
-<h1>Hello, admin!</h1>
+<h1>Admin panel mock-up.</h1>
 </body>
 </html>
