--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Weightlifting Log Error Panel</title>
+    <style>
+        html, body {
+            height: 100%;
+            display: grid;
+        }
+    </style>
 </head>
 <body>
-<h1>Error!!!</h1>
+    <div style="margin: auto; text-align: center">
+        <h2>You need admin rights to access this feature.</h2>
+        <button onclick="location.href='/wl/'" type="button">Take me back</button>
+    </div>
 </body>
 </html>
