--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 <div class="container">
 
     <!--Title and logo section-->
-    <h2>Weightlifting Log</h2>
+    <h2 th:text = "'Weightlifting Log ' + ${isActive}"></h2>
 
     <!--Navbar section-->
 
@@ -29,34 +29,44 @@
     <div class="tab-content">
 
         <!--Tab#1 content-->
-        <div id="home" class="tab-pane fade centered in active">
+        <div id="home" class="tab-pane centered fade in active">
+            <br/>
             <h3>Main calculator</h3>
+            <br/>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
 
         <!--Tab#2 content-->
-        <div id="menu1" class="tab-pane fade centered">
+        <div id="menu1" class="tab-pane centered fade">
+            <br/>
             <h3>Calculator #1</h3>
+            <br/>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
 
         <!--Tab#3 content-->
-        <div id="menu2" class="tab-pane fade centered">
+        <div id="menu2" class="tab-pane centered fade">
+            <br/>
             <h3>Calculator #2</h3>
+            <br/>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
         </div>
 
         <!--Tab#4 content-->
-        <div id="menu3" class="tab-pane fade centered">
+        <div id="menu3" class="tab-pane centered fade">
+            <br/>
             <h3>Login page</h3>
-            <p th:if="${loginError}" class="error">Wrong user or password</p>
+            <br/>
             <form th:action="@{/}" method="post">
                 <label for="username">Username</label>:
                 <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
                 <label for="password">Password</label>:
                 <input type="password" id="password" name="password" /> <br />
+                <br/>
                 <input type="submit" value="Log in" />
             </form>
+            <br/>
+            <p th:if="${loginError}" class="error">Wrong user or password</p>
         </div>
 
         <!--Page footer content-->
