--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -18,6 +18,7 @@
     <!--Navbar section-->
 
     <!--Tab header section-->
+    <!--Either main calculator tab or login tab are active depending on boolean sent from controller-->
     <ul class="nav nav-tabs nav-justified">
         <li class="" th:classappend="${showCalc != null}? active"><a data-toggle="tab" href="#home">Main calculator</a></li>
         <li><a data-toggle="tab" href="#menu1">Calculator #1</a></li>
@@ -26,6 +27,7 @@
     </ul>
 
     <!--Tab content-->
+    <!--Either main calculator tab or login tab content are visible depending on boolean sent from controller-->
     <div class="tab-content">
 
         <!--Tab#1 content-->
@@ -57,7 +59,7 @@
             <br/>
             <h3>Login page</h3>
             <br/>
-            <form th:action="@{/}" method="post">
+            <form th:action="@{/login}" method="post">
                 <label for="username">Username</label>:
                 <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
                 <label for="password">Password</label>:
