secure user endpoint, add mock-up user login indicator

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,6 +59,7 @@
             <br/>
             <h3>Login page</h3>
             <br/>
+            <h3 th:text="${userIndicator}"></h3>
             <form th:action="@{/login}" method="post">
                 <label for="username">Username</label>:
                 <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
