--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Weightlifting Log Admin Panel</title>
+    <style>
+        html, body {
+            height: 100%;
+            display: grid;
+        }
+    </style>
+    <script>
+        function goBack() {
+            window.history.back()
+        }
+    </script>
 </head>
 <body>
-<h1>Admin panel mock-up.</h1>
+<div style="margin: auto; text-align: center">
+    <h2>Welcome, Admin!</h2>
+    <button onclick="goBack()" type="button">Take me back</button>
+</div>
 </body>
 </html>
