--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Weightlifting Log Error Panel</title>
@@ -9,16 +9,12 @@
             display: grid;
         }
     </style>
-    <script>
-        function goBack() {
-            window.history.back()
-        }
-    </script>
 </head>
 <body>
-    <div style="margin: auto; text-align: center">
-        <h2>Error!!!</h2>
-        <button onclick="goBack()" type="button">Take me back</button>
-    </div>
+<div style="margin: auto; text-align: center">
+    <h2>Error!</h2>
+    <p>You don't have the credentials to use this feature!</p>
+    <button onclick = "location.href = '/wl/login'" type="button">Take me back</button>
+</div>
 </body>
 </html>
