add mock-up registration page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -59,6 +59,7 @@
             <br/>
             <h3>Login page</h3>
             <br/>
+            <p th:if="${loginError}" class="error">Wrong user or password</p>
             <h3 th:text="${userIndicator}"></h3>
             <form th:action="@{/login}" method="post">
                 <label for="username">Username</label>:
@@ -69,7 +70,8 @@
                 <input type="submit" value="Log in" />
             </form>
             <br/>
-            <p th:if="${loginError}" class="error">Wrong user or password</p>
+            <button onclick = "location.href = '/wl/register'" type = "button">Register</button>
+
         </div>
 
         <!--Page footer content-->
