add user detection and greeting to homepage, change admin panel back button

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,16 +9,11 @@
             display: grid;
         }
     </style>
-    <script>
-        function goBack() {
-            window.history.back()
-        }
-    </script>
 </head>
 <body>
 <div style="margin: auto; text-align: center">
     <h2>Welcome, Admin!</h2>
-    <button onclick="goBack()" type="button">Take me back</button>
+    <button onclick = "location.href = '/wl/login'" type="button">Take me back</button>
 </div>
 </body>
 </html>
