--- a/src/main/resources/templates/fragments/fragments.html
+++ b/src/main/resources/templates/fragments/fragments.html
@@ -8,7 +8,9 @@
         <br/>
         <h3>Login page</h3>
         <br/>
+        <!--/*@thymesVar id="loginError" type="java"*/-->
         <p th:if="${loginError}" class="error">Wrong user or password</p>
+        <!--/*@thymesVar id="userIndicator" type="java"*/-->
         <p th:text="${userIndicator}"></p>
         <form th:action="@{/login}" method="post">
             <label for="username">Username</label>:
@@ -20,6 +22,10 @@
         </form>
         <br/>
         <button onclick = "location.href = '/wl/register'" type = "button">Register</button>
+    </div>
+    <div th:fragment="admin">
+            <h2>Welcome, Admin!</h2>
+            <button onclick = "location.href = '/wl/login'" type="button">Take me back</button>
     </div>
 </body>
 </html>
