--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <title>Thymeleaf fragments</title>
 </head>
 <body>
 
@@ -13,8 +14,6 @@
     <br/>
     <!--/*@thymesVar id="loginError" type="java"*/-->
     <p th:if="${loginError}" class="error">Wrong user or password</p>
-    <!--/*@thymesVar id="userIndicator" type="java"*/-->
-    <p th:text="${userIndicator}"></p>
     <form th:action="@{/login}" method="post">
         <label for="username">Username</label>:
         <input type="text" id="username" name="username" autofocus="autofocus"/> <br/>
@@ -43,9 +42,16 @@
     <button onclick="location.href = '/wl/login'" type="button">OK</button>
 </div>
 
+<!--User panel-->
+<div th:fragment="userpanel">
+    <!--/*@thymesVar id="userIndicator" type="java"*/-->
+    <p th:text="${userIndicator}"></p>
+    <button onclick="location.href = '/wl/login'" type="button">Take me back</button>
+</div>
+
 <!--Admin panel-->
 
-<div th:fragment="admin">
+<div th:fragment="adminpanel">
     <h2>Welcome, Admin!</h2>
     <button onclick="location.href = '/wl/login'" type="button">Take me back</button>
 </div>
