add "log out" (not functional yet) and optional "admin panel" buttons to user panel

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -5,3 +5,13 @@
 .error {
     color: red;
 }
+
+.usercontrols {
+    margin-top: 1em;
+    margin-right: 1em;
+    text-align: right;
+}
+
+.same-row {
+    display: inline-block;
+}
