--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -39,21 +39,26 @@
 
 <div th:fragment="registersuccess">
     <h2>Registration successfull!</h2>
-    <button onclick="location.href = '/wl/login'" type="button">OK</button>
+    <button onclick="location.href='/wl/login'" type="button">OK</button>
 </div>
 
 <!--User panel-->
 <div th:fragment="userpanel">
-    <!--/*@thymesVar id="userIndicator" type="java"*/-->
-    <p th:text="${userIndicator}"></p>
-    <button onclick="location.href = '/wl/login'" type="button">Take me back</button>
+    <div class="usercontrols">
+        <!--/*@thymesVar id="userIndicator" type="java"*/-->
+        <p class="same-row" th:text="${userIndicator}"></p>
+        <button class="same-row" onclick="location.href='/wl/login'" type="button">Log out</button>
+        <!--/*@thymesVar id="adminRights" type="java"*/-->
+        <button th:if="${adminRights}" class="same-row" onclick="location.href='/wl/admin'">Admin panel</button>
+    </div>
+    <h2>Your workouts:</h2>
 </div>
 
 <!--Admin panel-->
 
 <div th:fragment="adminpanel">
     <h2>Welcome, Admin!</h2>
-    <button onclick="location.href = '/wl/login'" type="button">Take me back</button>
+    <button onclick="location.href='/wl/login'" type="button">Take me back</button>
 </div>
 </body>
 </html>
