--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,6 +14,8 @@
     <br/>
     <!--/*@thymesVar id="loginError" type="java"*/-->
     <p th:if="${loginError}" class="error">Wrong user or password</p>
+    <!--/*@thymesVar id="logoutSuccess" type="java"*/-->
+    <p th:if="${logoutSuccess}" class="error">You have logged out successfully!</p>
     <form th:action="@{/login}" method="post">
         <label for="username">Username</label>:
         <input type="text" id="username" name="username" autofocus="autofocus"/> <br/>
@@ -47,7 +49,7 @@
     <div class="usercontrols">
         <!--/*@thymesVar id="userIndicator" type="java"*/-->
         <p class="same-row" th:text="${userIndicator}"></p>
-        <button class="same-row" onclick="location.href='/wl/login'" type="button">Log out</button>
+        <button class="same-row" onclick="location.href='/wl/logout'" type="button">Log out</button>
         <!--/*@thymesVar id="adminRights" type="java"*/-->
         <button th:if="${adminRights}" class="same-row" onclick="location.href='/wl/admin'">Admin panel</button>
     </div>
