--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,9 +13,9 @@
     <h3>Login page</h3>
     <br/>
     <!--/*@thymesVar id="loginError" type="java"*/-->
-    <p th:if="${loginError}" class="error">Wrong user or password</p>
-    <!--/*@thymesVar id="logoutSuccess" type="java"*/-->
-    <p th:if="${logoutSuccess}" class="error">You have logged out successfully!</p>
+    <p th:if="${loginError}" class="alert">Wrong user or password</p>
+    <!--/*@thymesVar id="logoutMessage" type="java"*/-->
+    <p th:if="${logoutMessage}" th:text="${logoutMessage}" class="alert"></p>
     <form th:action="@{/login}" method="post">
         <label for="username">Username</label>:
         <input type="text" id="username" name="username" autofocus="autofocus"/> <br/>
