--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -39,16 +39,17 @@
 
 <!--Registration successful-->
 
-<div th:fragment="registersuccess">
+<div th:fragment="register-success">
     <h2>Registration successfull!</h2>
     <button onclick="location.href='/wl/login'" type="button">OK</button>
 </div>
 
 <!--User panel-->
-<div th:fragment="userpanel">
-    <div class="usercontrols">
-        <!--/*@thymesVar id="userIndicator" type="java"*/-->
-        <p class="same-row" th:text="${userIndicator}"></p>
+
+<div th:fragment="user-panel">
+    <div class="controls">
+        <!--/*@thymesVar id="userGreeting" type="java"*/-->
+        <p class="same-row" th:text="${userGreeting}"></p>
         <button class="same-row" onclick="location.href='/wl/logout'" type="button">Log out</button>
         <!--/*@thymesVar id="adminRights" type="java"*/-->
         <button th:if="${adminRights}" class="same-row" onclick="location.href='/wl/admin'">Admin panel</button>
@@ -58,9 +59,14 @@
 
 <!--Admin panel-->
 
-<div th:fragment="adminpanel">
+<div th:fragment="admin-panel">
+        <div class="controls">
+            <!--/*@thymesVar id="adminGreeting" type="java"*/-->
+            <p class="same-row" th:text="${adminGreeting}"></p>
+            <button class="same-row" onclick="location.href='/wl/logout'" type="button">Log out</button>
+            <button class="same-row" onclick="location.href='/wl/login'" type="button">Back</button>
+        </div>
     <h2>Welcome, Admin!</h2>
-    <button onclick="location.href='/wl/login'" type="button">Take me back</button>
 </div>
 </body>
 </html>
