--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -34,14 +34,17 @@
     <h2>Please enter your details to register...</h2>
     <!--/*@thymesVar id="user" type="java"*/-->
     <form th:action="@{/register}" th:object="${user}" method="post">
-        <p>Username: <input type="text" th:field="*{name}"/></p>
-        <p>Password: <input type="text" th:field="*{password}"/></p>
+        <p>Username: <input type="text" th:field="*{name}"/>
+            <span th:if="${#fields.hasErrors('name')}" class="alert" th:errors="*{name}">Please enter your username!</span></p>
+        <p>Password: <input type="text" th:field="*{password}"/>
+            <span th:if="${#fields.hasErrors('password')}" class="alert" th:errors="*{password}">Please enter your password!</span></p>
         <p>Email: <input type="text" th:field="*{email}"/></p>
+        <p><input type="checkbox" th:field="*{realEmail}"/><span>This is a real email, please send me an activation message</span></p>
         <p>First name: <input type="text" th:field="*{firstName}"/></p>
         <p>Surname: <input type="text" th:field="*{lastName}"/></p>
         <p>Age: <input type="number" th:field="*{age}"/></p>
-        <p>Female: <input type="radio" th:field="*{gender}"/>
-            Male: <input type="radio" th:field="*{gender}"/></p>
+        <p>Female: <input type="radio" th:field="*{gender}" th:value="false"/>
+            Male: <input type="radio" th:field="*{gender}" th:value="true"/></p>
         <input type="submit" value="Register">
     </form>
 </div>
