add cancel button to register/edit user details form

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -55,6 +55,7 @@
         <input type="hidden" th:field="*{role}"/>
         <!--/*@thymesVar id="buttonText" type="java"*/-->
         <input type="submit" th:value="${buttonText}">
+        <button onclick="location.href='/wl/login'" type="button">Cancel</button>
     </form>
 </div>
 
