--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script src="js/main.js"></script>
     <title>Weightlifting Log Home</title>
 </head>
 <body>
@@ -42,17 +43,20 @@
         <div id="menu1" class="tab-pane centered fade">
             <br/>
             <h3>1 Rep Max Calculator</h3>
-            <br/>
-            <h5>Weight lifted:</h5>
-            <div>
-                <input type="range" min="1" max="100" value="50" class="slider">
-            </div>
-            <h5>Number of reps:</h5>
-            <div>
-                <input type="range" min="1" max="100" value="50" class="slider">
-            </div>
             <br>
-            <button type="button">Calculate!</button>
+            <input id="result" type="text" value="" readonly>
+            <button type="button" onclick="calculate1RM()">Calculate!</button><br/><br/>
+            <div>
+                <label for="weight">Weight lifted</label>
+                <input name="weight" id="weight" type="range" min="1" max="200" value="100" class="slider" onchange="updateWeight(this.value)">
+                <input type="text" id="weight-text" value="100">
+            </div>
+            <br/>
+            <div>
+                <label for="reps">Number of reps:</label>
+                <input name="reps" id="reps" type="range" min="1" max="19" value="10" class="slider" onchange="updateReps(this.value)">
+                <input type="text" id="reps-text" value="10">
+            </div>
         </div>
 
         <!--Tab#3 content-->
