--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -15,3 +15,19 @@
 .same-row {
     display: inline-block;
 }
+
+#percentages {
+    border: 1px solid darkgrey;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#percentages td {
+    padding: 1em;
+    text-align: center;
+}
+
+.percentage-input {
+    width: 4em;
+    text-align: center;
+}
