--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,18 +44,57 @@
             <br/>
             <h3>1 Rep Max Calculator</h3>
             <br>
-            <input id="result" type="text" value="" readonly>
-            <button type="button" onclick="calculate1RM()">Calculate!</button><br/><br/>
             <div>
                 <label for="weight">Weight lifted</label>
-                <input name="weight" id="weight" type="range" min="1" max="200" value="100" class="slider" onchange="updateWeight(this.value)">
-                <input type="text" id="weight-text" value="100">
+                <input name="weight" id="weight" type="range" min="1" max="200" value="100" class="slider" onchange="updateWeight(this.value)"><br/>
+                <label for="weight-text"></label><input type="text" id="weight-text" value="100">
             </div>
             <br/>
             <div>
                 <label for="reps">Number of reps:</label>
-                <input name="reps" id="reps" type="range" min="1" max="19" value="10" class="slider" onchange="updateReps(this.value)">
-                <input type="text" id="reps-text" value="10">
+                <input name="reps" id="reps" type="range" min="1" max="19" value="10" class="slider" onchange="updateReps(this.value)"><br/>
+                <label for="reps-text"></label><input type="text" id="reps-text" value="10">
+            </div>
+            <br/>
+            <div>
+                <table id="percentages">
+                    <tr>
+                        <td colspan="13">
+                            <label for="result">100%</label><input id="result" type="text" value="" readonly>
+                            <button type="button" onclick="calculate1RM()">Calculate!</button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>%<input class="percentage-input" id="percentage-input-1" type="number" value="95"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-2" type="number" value="90"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-3" type="number" value="85"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-4" type="number" value="80"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-5" type="number" value="75"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-6" type="number" value="70"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-7" type="number" value="65"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-8" type="number" value="60"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-9" type="number" value="50"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-10" type="number" value="40"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-11" type="number" value="30"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-12" type="number" value="20"/></td>
+                        <td>%<input class="percentage-input" id="percentage-input-13" type="number" value="10"/></td>
+                    </tr>
+                    <tr>
+                        <td id="percentage-1"> </td>
+                        <td id="percentage-2"> </td>
+                        <td id="percentage-3"> </td>
+                        <td id="percentage-4"> </td>
+                        <td id="percentage-5"> </td>
+                        <td id="percentage-6"> </td>
+                        <td id="percentage-7"> </td>
+                        <td id="percentage-8"> </td>
+                        <td id="percentage-9"> </td>
+                        <td id="percentage-10"> </td>
+                        <td id="percentage-11"> </td>
+                        <td id="percentage-12"> </td>
+                        <td id="percentage-13"> </td>
+                    </tr>
+                </table>
             </div>
         </div>
 
