--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -31,25 +31,29 @@
     <!--Either main calculator tab or login tab content are visible depending on boolean sent from controller-->
     <div class="tab-content">
 
-        <!--Tab#1 content-->
+        <!--Tab#1 content - overall strength calculator-->
         <div id="home" class="tab-pane centered fade" th:classappend="${showCalc != null}? 'in active'">
             <br/>
-            <h3>Main calculator</h3>
+            <h3>Overall Strength</h3>
             <br/>
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
 
-        <!--Tab#2 content-->
+        <!--Tab#2 content - percentages calculator-->
         <div id="menu1" class="tab-pane centered fade">
             <br/>
-            <h3>1 Rep Max Calculator</h3>
+            <h3>Percentages Calculator</h3>
             <br>
+
+            <!--Weight slider-->
             <div>
                 <label for="weight">Weight lifted</label>
                 <input name="weight" id="weight" type="range" min="1" max="200" value="100" class="slider" onchange="updateWeight(this.value)"><br/>
                 <label for="weight-text"></label><input type="text" id="weight-text" value="100">
             </div>
             <br/>
+
+            <!--Number of reps performed slider-->
             <div>
                 <label for="reps">Number of reps:</label>
                 <input name="reps" id="reps" type="range" min="1" max="19" value="10" class="slider" onchange="updateReps(this.value)"><br/>
@@ -57,13 +61,19 @@
             </div>
             <br/>
             <div>
+
+                <!--Percentages calculator-->
                 <table id="percentages">
                     <tr>
+
+                        <!--1 rep max result and "calculate" button-->
                         <td colspan="13">
                             <label for="result">100%</label><input id="result" type="text" value="" readonly>
                             <button type="button" onclick="calculate1RM()">Calculate!</button>
                         </td>
                     </tr>
+
+                    <!--Predefined percentages, adjustable-->
                     <tr>
                         <td>%<input class="percentage-input" id="percentage-input-1" type="number" value="95"/></td>
                         <td>%<input class="percentage-input" id="percentage-input-2" type="number" value="90"/></td>
@@ -79,6 +89,8 @@
                         <td>%<input class="percentage-input" id="percentage-input-12" type="number" value="20"/></td>
                         <td>%<input class="percentage-input" id="percentage-input-13" type="number" value="10"/></td>
                     </tr>
+
+                    <!--Percentages calculation results-->
                     <tr>
                         <td id="percentage-1"> </td>
                         <td id="percentage-2"> </td>
