add main sliders to "overall strength" tab

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,7 +36,37 @@
             <br/>
             <h3>Overall Strength</h3>
             <br/>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <div>
+                <label for="squat">Back squat - weight:</label>
+                <input name="squat" id="squat" type="range" min="1" max="300" value="150" class="slider" onchange=""><br/>
+                <label for="squat-text"></label><input type="text" id="squat-text" value="150">
+            </div>
+            <div>
+                <label for="bench">Bench press - weight:</label>
+                <input name="bench" id="bench" type="range" min="1" max="200" value="100" class="slider" onchange=""><br/>
+                <label for="bench-text"></label><input type="text" id="bench-text" value="100">
+            </div>
+            <div>
+                <label for="deadlift">Deadlift - weight:</label>
+                <input name="deadlift" id="deadlift" type="range" min="1" max="400" value="200" class="slider" onchange=""><br/>
+                <label for="deadlift-text"></label><input type="text" id="deadlift-text" value="200">
+            </div>
+            <br/>
+            <div>
+                <label for="military">Military press - weight:</label>
+                <input name="military" id="military" type="range" min="1" max="150" value="75" class="slider" onchange=""><br/>
+                <label for="military-text"></label><input type="text" id="military-text" value="75">
+            </div>
+            <div>
+                <label for="row">Barbell row - weight:</label>
+                <input name="row" id="row" type="range" min="1" max="200" value="100" class="slider" onchange=""><br/>
+                <label for="row-text"></label><input type="text" id="row-text" value="100">
+            </div>
+            <div>
+                <label for="pullup">Pull-up - weight:</label>
+                <input name="pullup" id="pullup" type="range" min="1" max="150" value="75" class="slider" onchange=""><br/>
+                <label for="pullup-text"></label><input type="text" id="pullup-text" value="75">
+            </div>
         </div>
 
         <!--Tab#2 content - percentages calculator-->
