--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,29 @@
+html body {
+    background-color: black;
+    color: orange;
+}
+
+input {
+    color: black;
+}
+
+.nav-tabs > li > a {
+    color: orange;
+}
+
+.nav-tabs > li > a:hover {
+    background-color: orange !important;
+    color: black;
+}
+
+.nav-tabs > li.active > a {
+    background-color: orange !important;
+    color: black !important;
+}
+
+.nav-tabs > li > a {
+    color: orange;
+}
 .centered {
     text-align: center;
 }
