--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,29 +1,30 @@
 html body {
-    background-color: black;
-    color: orange;
+    background-color: #454343;
+    color: #ff9200;
 }
 
 input {
-    color: black;
+    color: #454343;
 }
 
 .nav-tabs > li > a {
-    color: orange;
+    color: #454343;
 }
 
 .nav-tabs > li > a:hover {
-    background-color: orange !important;
-    color: black;
+    background-color: #ff9200 !important;
+    color: #454343;
 }
 
 .nav-tabs > li.active > a {
-    background-color: orange !important;
-    color: black !important;
+    background-color: #ff9200 !important;
+    color: #454343 !important;
 }
 
 .nav-tabs > li > a {
-    color: orange;
+    color: #ff9200;
 }
+
 .centered {
     text-align: center;
 }
@@ -56,4 +57,95 @@ input {
 .percentage-input {
     width: 4em;
     text-align: center;
+}
+
+/* slider styling */
+input[type=range] {
+    height: 34px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    background-color: #454343;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    animation-duration: 0.2s;
+    box-shadow: 1px 1px 1px #472900;
+    background: #FF9200;
+    border-radius: 1px;
+    border: 1px solid #FFFFFF;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 3px 3px 3px #472900;
+    border: 2px solid #FFFFFF;
+    height: 23px;
+    width: 23px;
+    border-radius: 23px;
+    background: #FF9200;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #FF9200;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    animation-duration: 0.2s;
+    box-shadow: 1px 1px 1px #472900;
+    background: #FF9200;
+    border-radius: 1px;
+    border: 1px solid #FFFFFF;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 3px 3px 3px #472900;
+    border: 2px solid #FFFFFF;
+    height: 23px;
+    width: 23px;
+    border-radius: 23px;
+    background: #FF9200;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 12px;
+    cursor: pointer;
+    animation-duration: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #FF9200;
+    border: 1px solid #FFFFFF;
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px #472900;
+}
+input[type=range]::-ms-fill-upper {
+    background: #FF9200;
+    border: 1px solid #FFFFFF;
+    border-radius: 2px;
+    box-shadow: 1px 1px 1px #472900;
+}
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 3px 3px 3px #472900;
+    border: 2px solid #FFFFFF;
+    height: 23px;
+    width: 23px;
+    border-radius: 23px;
+    background: #FF9200;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #FF9200;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #FF9200;
 }
