--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -110,7 +110,7 @@
 
                     <!--1 rep max result and "calculate" button-->
                     <td colspan="13">
-                        <label for="result">100%</label><input id="result" type="text" value="" readonly>
+                        <label for="result">1 Rep Max - 100%</label><input id="result" type="text" value="" readonly>
                         <button type="button" onclick="calculate1RM()">Calculate!</button>
                     </td>
                 </tr>
