--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -82,7 +82,7 @@
     <!--Tab#2 content - percentages calculator-->
     <div id="menu1" class="tab-pane centered fade">
         <br/>
-        <h3>Percentages Calculator</h3>
+        <h3>1 Rep Max and Percentages Calculator</h3>
         <br>
 
         <!--Weight slider-->
@@ -109,9 +109,9 @@
                 <tr>
 
                     <!--1 rep max result and "calculate" button-->
-                    <td colspan="13">
+                    <td class="centered" colspan="13">
                         <label for="result">1 Rep Max - 100%</label><input id="result" type="text" value="" readonly>
-                        <button type="button" onclick="calculate1RM()">Calculate!</button>
+                        <button class="my-button" type="button" onclick="calculate1RM()">Calculate</button>
                     </td>
                 </tr>
 
