--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,11 +24,11 @@
 <!--Tab header section-->
 <!--Either main calculator tab or login tab are active depending on boolean sent from controller-->
 <ul class="nav nav-tabs nav-justified">
-    <li class="" th:classappend="${showCalc != null}? active"><a data-toggle="tab" href="#home">Main calculator</a>
+    <li class="" th:classappend="${showCalc != null}? active"><a data-toggle="tab" href="#tab1">Overall Strength</a>
     </li>
-    <li><a data-toggle="tab" href="#menu1">1 Rep Max</a></li>
-    <li><a data-toggle="tab" href="#menu2">Calculator #2</a></li>
-    <li class="" th:classappend="${showCalc == null}? active"><a data-toggle="tab" href="#menu3">Training Log</a>
+    <li><a data-toggle="tab" href="#tab2">1 Rep Max</a></li>
+    <li><a data-toggle="tab" href="#tab3">Calculator #2</a></li>
+    <li class="" th:classappend="${showCalc == null}? active"><a data-toggle="tab" href="#tab4">Training Log</a>
     </li>
 </ul>
 
@@ -37,11 +37,11 @@
 <div class="tab-content">
 
     <!--Tab#1 content - overall strength calculator-->
-    <div id="home" class="tab-pane centered fade" th:classappend="${showCalc != null}? 'in active'">
+    <div id="tab1" class="tab-pane centered fade" th:classappend="${showCalc != null}? 'in active'">
         <br/>
         <h3>Overall Strength</h3>
         <br/>
-        <div>
+        <div class="overall-strenght">
             <label for="squat">Back squat - weight:</label>
             <input name="squat" id="squat" type="range" min="1" max="300" value="150" class="slider"
                    onchange=""><br/>
@@ -80,7 +80,7 @@
     </div>
 
     <!--Tab#2 content - percentages calculator-->
-    <div id="menu1" class="tab-pane centered fade">
+    <div id="tab2" class="tab-pane centered fade">
         <br/>
         <h3>1 Rep Max and Percentages Calculator</h3>
         <br>
@@ -153,7 +153,7 @@
     </div>
 
     <!--Tab#3 content-->
-    <div id="menu2" class="tab-pane centered fade">
+    <div id="tab3" class="tab-pane centered fade">
         <br/>
         <h3>Calculator #2</h3>
         <br/>
@@ -238,7 +238,7 @@
     </div>
 
     <!--Tab#4 content-->
-    <div id="menu3" class="tab-pane centered fade" th:classappend="${showCalc == null}? 'in active'">
+    <div id="tab4" class="tab-pane centered fade" th:classappend="${showCalc == null}? 'in active'">
         <div th:if="${!page.isEmpty()}" th:replace="__${page}__">
             <p>If you see this message, something went wrong...</p>
         </div>
