--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,7 +23,7 @@
 
 <!--Tab header section-->
 <!--Either main calculator tab or login tab are active depending on boolean sent from controller-->
-<ul class="nav nav-tabs nav-justified">
+<ul class="nav nav-tabs nav-justified" id="big-tabs">
     <li class="" th:classappend="${showCalc != null}? active"><a data-toggle="tab" href="#tab1">Overall Strength</a>
     </li>
     <li><a data-toggle="tab" href="#tab2">1 Rep Max</a></li>
